dark mode icon fix

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -17,6 +17,10 @@
 		opacity: .93;
 	}
 
+	footer a {
+		color: black;
+	}
+
 	a {
 		color: #64afff;
 	}
